--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,13 @@
 {
-  "name": "MCM Alerts",
+  "name": "MCM Alerts - Real-time Monitoring System",
   "short_name": "MCM Alerts",
-  "description": "Real-time monitoring and alert system",
+  "description": "Real-time monitoring and alert system with push notifications",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#f8fafc",
+  "background_color": "#1e293b",
   "theme_color": "#1e293b",
   "orientation": "portrait-primary",
+  "scope": "/",
   "icons": [
     {
       "src": "/mcm-logo-192.png",
@@ -23,5 +24,23 @@
   ],
   "categories": ["monitoring", "productivity", "utilities"],
   "lang": "en",
-  "dir": "ltr"
+  "dir": "ltr",
+  "prefer_related_applications": false,
+  "shortcuts": [
+    {
+      "name": "Dashboard",
+      "short_name": "Dashboard",
+      "description": "Open MCM Alerts Dashboard",
+      "url": "/",
+      "icons": [{ "src": "/mcm-logo-192.png", "sizes": "192x192" }]
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/mcm-logo-512.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "form_factor": "wide"
+    }
+  ]
 }
