--- a/netlify.toml
+++ b/netlify.toml
@@ -5,69 +5,18 @@
 [functions]
   directory = "netlify/functions"
 
-# API redirects - specific routes first
+# API redirects first
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
 
-# Static asset handling - ensure CSS, JS, images aren't redirected
-[[redirects]]
-  from = "*.css"
-  to = "*.css"
-  status = 200
-
-[[redirects]]
-  from = "*.js"
-  to = "*.js"
-  status = 200
-
-[[redirects]]
-  from = "*.png"
-  to = "*.png"
-  status = 200
-
-[[redirects]]
-  from = "*.jpg"
-  to = "*.jpg"
-  status = 200
-
-[[redirects]]
-  from = "*.jpeg"
-  to = "*.jpeg"
-  status = 200
-
-[[redirects]]
-  from = "*.gif"
-  to = "*.gif"
-  status = 200
-
-[[redirects]]
-  from = "*.svg"
-  to = "*.svg"
-  status = 200
-
-[[redirects]]
-  from = "*.ico"
-  to = "*.ico"
-  status = 200
-
-[[redirects]]
-  from = "*.woff"
-  to = "*.woff"
-  status = 200
-
-[[redirects]]
-  from = "*.woff2"
-  to = "*.woff2"
-  status = 200
-
-# For client-side routing (React Router / Vite SPA) - MUST be last
+# SPA routing - this should be the ONLY redirect for HTML pages
+# The key is that Netlify will serve existing files first, then fall back to this redirect
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-  force = false
 
 # Headers for service worker
 [[headers]]
@@ -76,66 +25,27 @@
     Cache-Control = "no-cache"
     Service-Worker-Allowed = "/"
 
-# Headers for CSS files - ensure proper MIME type
+# Headers for assets folder (Vite puts built files here)
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+
+# Headers for CSS files
 [[headers]]
   for = "*.css"
   [headers.values]
     Content-Type = "text/css"
     Cache-Control = "public, max-age=31536000"
-    X-Content-Type-Options = "nosniff"
 
-# Headers for JavaScript files
+# Headers for JavaScript files  
 [[headers]]
   for = "*.js"
   [headers.values]
     Content-Type = "application/javascript"
     Cache-Control = "public, max-age=31536000"
 
-# Headers for static assets
-[[headers]]
-  for = "*.png"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-
-[[headers]]
-  for = "*.jpg"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-
-[[headers]]
-  for = "*.jpeg"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-
-[[headers]]
-  for = "*.gif"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-
-[[headers]]
-  for = "*.svg"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-    Content-Type = "image/svg+xml"
-
-[[headers]]
-  for = "*.ico"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-
-[[headers]]
-  for = "*.woff"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-    Content-Type = "font/woff"
-
-[[headers]]
-  for = "*.woff2"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-    Content-Type = "font/woff2"
-
-# Global security headers
+# Global security headers (applied after specific headers)
 [[headers]]
   for = "/*"
   [headers.values]
