--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
-dist
+
+# Build output - REMOVED 'dist' from here
+# dist should NOT be in .gitignore when using Netlify build
 dist-ssr
 *.local
 
@@ -30,10 +33,3 @@ dist-ssr
 
 # Netlify
 .netlify/
-
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.env
