--- a/package.json
+++ b/package.json
@@ -81,10 +81,10 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
-    "vite-plugin-pwa": "^1.0.1",          <-- ADD THIS LINE
-    "workbox-precaching": "^7.3.0",       <-- ADD THIS LINE
-    "workbox-routing": "^7.3.0",          <-- ADD THIS LINE
-    "workbox-strategies": "^7.3.0",       <-- ADD THIS LINE
-    "workbox-expiration": "^7.3.0"        <-- ADD THIS LINE
+    "vite-plugin-pwa": "^1.0.1",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
+    "workbox-expiration": "^7.3.0"
   }
 }
