--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "web-push": "^3.6.6",
+    "workbox-precaching": "^7.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -80,6 +81,7 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "web-push": "^3.6.7"
   }
 }
