--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
+    "vite-plugin-pwa": "^0.18.3",
     "web-push": "^3.6.7"
   }
 }
